Add ability to generate companion

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,8 +1,7 @@
-textarea {
-  width: 90vw;
-  height: 75vh;
+:root {
+  font-family: Helvetica, Arial, sans-serif;
 }
 
-button {
-  display: block;
+#file-processors {
+  margin-top: 20px;
 }
