--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -2,12 +2,22 @@
   font-family: Helvetica, Arial, sans-serif;
 }
 
+h2 {
+  margin-bottom: 5px;
+}
+
+button:enabled:hover,
+input[type=file]:enabled:hover,
+input[type=checkbox]:enabled:hover {
+  cursor: pointer;
+}
+
 #file-processors {
   margin-top: 20px;
 }
 
-#add-partial-sheet {
-  margin-top: 20px;
+#partial-sheet-ui {
+  margin-top: 30px;
 }
 
 #partial-sheets {
@@ -18,6 +28,7 @@
   border: 1px solid black;
   font-size: 0;
   display: inline-block;
+  margin-bottom: 15px;
   margin-right: 20px;
   padding: 4px;
 }
