Add hover styling to partial sheet UI

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -45,3 +45,7 @@ input[type=checkbox]:enabled:hover {
 .partial > div > input:checked {
   border: none;
 }
+
+.partial > div > input:hover {
+  background: #EEEEEE;
+}
