--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,7 +1,9 @@
+/* Global */
 :root {
   font-family: Helvetica, Arial, sans-serif;
 }
 
+/* Elements */
 h2 {
   margin-bottom: 5px;
 }
@@ -12,6 +14,7 @@ input[type=checkbox]:enabled:hover {
   cursor: pointer;
 }
 
+/* Sections */
 #file-processors {
   margin-top: 20px;
 }
